# llm-orc

./: .coverage  .coverage.ng-mb-pro.local.90997.XkXSYAWx  .coverage.ng-mb-pro.local.91310.XpGlFjtx  .coverage.ng-mb-pro.local.91326.XxrfNcZx  .coverage.ng-mb-pro.local.91358.XZdkOvux  .coverage.ng-mb-pro.local.91361.XhltUTBx  .coverage.ng-mb-pro.local.91367.XuQwZYmx  .coverage.ng-mb-pro.local.91368.XTeMawSx  .coverage.ng-mb-pro.local.91376.XJENxGOx  .coverage.ng-mb-pro.local.91411.XGVNjtVx  .coverage.ng-mb-pro.local.91412.XzeISYOx  .coverage.ng-mb-pro.local.91415.XRRiqSex  .coverage.ng-mb-pro.local.91428.XZokmOHx  .coverage.ng-mb-pro.local.91433.XPbVucYx  .gitignore  CHANGELOG.md  Makefile  README.md  RELEASE.md  coverage.json  fallback-system-design.md  get_real_access_token.py  mitmproxy-ca-cert.pem  pyproject.toml  test_json_output.py  test_oauth_api_calls.py  test_oauth_e2e.py  test_proxy_bypass.py  test_token_exchange.py
.claude/: README.md  settings.json  settings.local.json
.claude/agents/: README.md  bdd-unit-test-coordinator.md  feature-analyzer.md  llm-orc-architecture-reviewer.md  llm-orc-dogfooding-advisor.md  llm-orc-performance-optimizer.md  llm-orc-security-auditor.md  progress-updater.md  test-organization-coordinator.md
.claude/hooks/: README.md  adr-lifecycle-manager.sh  bdd-development-gate.sh  bdd-test-migrator.sh  bdd-unit-test-generator.sh  check_bdd_coverage.py  complexity-gate.sh  development-workflow-guide.sh  feature-context.sh  implementation-checkpoint.sh  intelligent-post-edit.sh  line-length-helper.sh  manual-quality-checks.sh  pre-implementation-gate.sh  session_start_adr_summary.py  test-coverage-gate.sh  testing-pyramid-gate.sh  unused-variable-cleaner.sh
.github/workflows/: ci.yml  publish.yml
.llm-orc/: README.md  config.yaml
.llm-orc/ensembles/: adequacy-judge.yaml  agentic-calibration-checker.yaml  agentic-result-summarizer.yaml  argument-mapper.yaml  build-code-round.yaml  build-gated-round.yaml  build-gated.yaml  build-round.yaml  code-generator-omega.yaml  code-generator.yaml  code-review.yaml  code-seat.yaml  conversation-test.yaml  dd-echo-explain.yaml  dd-echo-solo.yaml  dd-echo-verified.yaml  dd-seat-code-solo-fast.yaml  dd-seat-code-solo.yaml  dd-seat-code-verified-fast.yaml  dd-seat-code-verified.yaml  dd-seat-explain-fast.yaml  dd-seat-explain.yaml  dd-serve-skeleton.yaml  explainer.yaml  fan-out-test.yaml  gen-review.yaml  interdisciplinary-research.yaml  multi-level-test.yaml  multi-role-test.yaml  mycology-meets-technology.yaml  need-files.yaml  need-glob.yaml  need-run.yaml  not-grounded.yaml  oauth-minimal-test.yaml  oauth-test.yaml  plexus-graph-analysis.yaml  product-strategy.yaml  prose-generator-omega.yaml  q2-accept-gate.yaml  (+33 more)
.llm-orc/profiles/: agentic-orchestrator-minimax-m25.yaml  agentic-orchestrator-offline-8b.yaml  agentic-orchestrator-offline-tools.yaml  agentic-orchestrator-offline.yaml  agentic-orchestrator-qwen36-zen.yaml  agentic-orchestrator.yaml  agentic-summarizer.yaml  agentic-tier-cheap-general.yaml  agentic-tier-cheap-summary.yaml  agentic-tier-escalated-general.yaml  agentic-tier-escalated-reasoning.yaml  agentic-tier-frontier-coder-minimax.yaml  research-profiles.yaml
.llm-orc/scripts/: spike_adr016_b_time_decay_windowing.py  spike_c_diff_analyzer.py  spike_d_fix_verifier.py  test_json_contract_agent.py
.rdd/: dispatch-log.jsonl
.rdd/audits/: argument-audit-cycle-7-loopback-round2.md  argument-audit-cycle-7-loopback-round3.md  argument-audit-cycle-7-loopback-round4.md  argument-audit-cycle-7-loopback.md  citation-audit-cycle-7-loopback-round2.md  citation-audit-cycle-7-loopback.md  research-design-review-cycle-7-loopback.md  susceptibility-snapshot-cycle-7-loopback6-decide.md  susceptibility-snapshot-cycle-8-build.md
.rdd/gates/: cycle-7-architect-build-gate.md  cycle-7-decide-architect-gate.md  cycle-7-discover-model-gate.md  cycle-7-loopback-architect-build-gate.md  cycle-7-loopback-decide-architect-gate.md  cycle-7-loopback-discover-model-gate.md  cycle-7-loopback-model-decide-gate.md  cycle-7-loopback-research-discover-gate.md  cycle-7-loopback4-decide-build-gate.md  cycle-7-loopback5-architect-build-gate.md  cycle-7-loopback5-decide-architect-gate.md  cycle-7-loopback6-decide-build-gate.md  cycle-7-loopback7tail-decide-build-gate.md  cycle-7-model-decide-gate.md  cycle-7-research-discover-gate.md  cycle-8-build-gate.md  cycle-8-c8-gate.md  cycle-8-e8-gate.md
benchmark-runs/: phased-checkpoint.jsonl  phased-progress.txt
benchmarks/: __init__.py  parallelization_study.py  parallelization_study_results.md
docs/: architecture.md  authentication.md  cli-reference.md  codebase-audit.md  coding-standards.md  domain-model.md  ensemble_vs_single_agent_analysis.md  model_profiles.md  parallelization_architecture.md  rdd-graduation.md  research-log.md  scenarios.md  script-agent-architecture.md  serving-roadmap-archive-2026-07-17.md  serving-roadmap.md  serving.md
docs/adrs/: README.md  (+15 more)
examples/: pr_review_with_gh_cli.py  shakespeare_einstein_conversation.py
oauth_testing/: browser_oauth_flow.py  get_new_auth_code.py  get_pkce_params.py  test_anthropic_callback_flow.py  test_claude_code_token.py  test_complete_oauth_loop.py  test_flow.py  test_oauth_e2e_fixed.py  test_opencode_flow.py
tests/: __init__.py  conftest.py  test_agent_orchestration.py  test_authentication.py  test_cli.py  test_cli_auth.py  test_cli_commands.py  test_cli_commands_complexity_refactor.py  test_cli_completion.py  test_cli_main.py  test_cli_script_commands.py  test_cli_serve.py  test_communication_protocol.py  test_config.py  test_coordinator_model.py  test_enhanced_model_profiles.py  test_ensemble_config.py  test_ensemble_execution.py  test_ensemble_script_integration.py  test_handle_streaming_event_complexity_refactor.py  test_issue_24_units.py  test_mcp_server.py  test_mcp_server_integration.py  test_models.py  test_no_artifact_creation.py  test_oauth_models.py  test_oauth_token_storage.py  test_performance.py  test_role_system.py  test_script_agent.py  test_script_discovery.py  test_visualization.py
(+3059 files in other folders)
