[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-orchestra"
version = "0.15.11"
description = "Multi-agent LLM communication system with ensemble orchestration"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    {name = "Nathan Green", email = "contact@nate.green"},
]
keywords = ["llm", "agents", "orchestration", "ensemble", "ai", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research", 
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.12",
    "anthropic",
    "google-genai",
    "ollama",
    "click",
    "pyyaml",
    "cryptography",
    "requests>=2.32.4",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.1.1",
    "mcp>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-bdd>=7.0.0",
    "ruff>=0.0.287",
    "mypy>=1.5.0",
    "build",
    "twine",
    "pip-audit>=2.6.0",
]

[project.urls]
"Homepage" = "https://github.com/mrilikecoding/llm-orc"
"Repository" = "https://github.com/mrilikecoding/llm-orc"
"Bug Tracker" = "https://github.com/mrilikecoding/llm-orc/issues"
"Documentation" = "https://github.com/mrilikecoding/llm-orc#readme"

[project.scripts]
llm-orc = "llm_orc.cli:cli"


[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=llm_orc --cov-report=term-missing --cov-fail-under=90"
filterwarnings = [
    # Python 3.13 + AsyncMock: gc collects unawaited coroutines from mock
    # internals and from tests that mock asyncio.run. Not actionable.
    "ignore:coroutine '_async_noop' was never awaited:RuntimeWarning",
    "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning",
    "ignore:coroutine 'run_standard_execution' was never awaited:RuntimeWarning",
    "ignore:coroutine 'run_streaming_execution' was never awaited:RuntimeWarning",
    # gherkin library passes maxsplit as positional arg; fixed upstream but
    # not yet released. https://github.com/cucumber/gherkin/issues/198
    "ignore:'maxsplit' is passed as positional argument:DeprecationWarning",
    # pytest tries to collect Click commands named test_* as test functions
    "ignore:cannot collect 'test_script' because it is not a function:pytest.PytestCollectionWarning",
]
markers = [
    "asyncio: marks tests as requiring asyncio",
    # BDD Gherkin tags from feature files
    "adr-001: ADR-001 Pydantic Script Agent Interface tests",
    "adr-001-compliance: Tests for ADR-001 compliance",
    "adr-002: ADR-002 Composable Primitive Agent System tests",
    "adr-002-compliance: Tests for ADR-002 compliance",
    "adr-006: ADR-006 Library-Based Primitives Architecture tests",
    "adr-007: ADR-007 Progressive Ensemble Validation Suite tests",
    "adr-009: ADR-009 MCP Server Architecture and Plexus Integration tests",
    "adr-010: ADR-010 Local Web UI tests",
    "adr-011: ADR-011 Remove Conversational Ensemble System tests",
    "adr-012: ADR-012 Pydantic Agent Config Models tests",
    "adr-013: ADR-013 Ensemble Agent Type tests",
    "adr-014: ADR-014 Input Key Selective Upstream Consumption tests",
    "agent-request-processing: Tests for agent request processing",
    "architectural-compliance: Tests for architectural compliance",
    "artifact-management: Tests for artifact management",
    "backward-compatibility: Tests for backward compatibility",
    "bridge-primitives: Tests for bridge primitives",
    "caching-reproducibility: Tests for caching and reproducibility",
    "core-functionality: Core functionality tests",
    "core-schema-validation: Core schema validation tests",
    "dependency-resolution: Tests for dependency resolution",
    "discovery: Tests for script discovery",
    "dual-purpose: Tests for dual-purpose functionality",
    "dynamic-communication: Tests for dynamic communication",
    "ecosystem-extensibility: Tests for ecosystem extensibility",
    "engine-simplicity: Tests for engine simplicity",
    "enhanced-script-agent: Tests for enhanced script agent",
    "ensemble-integration: Tests for ensemble integration",
    "error-handling: Tests for error handling",
    "extensibility: Tests for extensibility",
    "extension-patterns: Tests for extension patterns",
    "function-generation: Tests for function generation",
    "integration: Integration tests",
    "integration-compatibility: Tests for integration compatibility",
    "json-serialization: Tests for JSON serialization",
    "library-optional-installation: Tests for library optional installation",
    "llm-simulation: Tests with LLM simulation",
    "multi-language-execution: Tests for multi-language execution",
    "performance: Performance tests",
    "performance-requirements: Performance requirement tests",
    "primitive-library: Tests for primitive library",
    "priority: Tests for priority handling",
    "progressive-validation: Tests for progressive validation",
    "schema-extension: Tests for schema extension",
    "script-discovery: Tests for script discovery",
    "script-resolution: Tests for script resolution",
    "security: Security tests",
    "security-validation: Tests for security validation",
    "specialized-schemas: Tests for specialized schemas",
    "state-management: Tests for state management",
    "template-system: Tests for template system",
    "test-fixtures: Tests for test fixtures",
    "test-independence: Tests for test independence",
    "type-safety: Tests for type safety",
    "validation-framework: Tests for validation framework",
    "workflow-composition: Tests for workflow composition",
    "workflow-validation: Tests for workflow validation",
    "yaml-configuration: Tests for YAML configuration",
    # ADR-009 MCP Server tags
    "mcp: MCP Server tests",
    "ensembles: Ensemble resource tests",
    "resource: MCP resource tests",
    "ensemble-detail: Ensemble detail resource tests",
    "artifacts: Artifact resource tests",
    "artifact-detail: Artifact detail tests",
    "metrics: Metrics resource tests",
    "profiles: Profile resource tests",
    "tool: MCP tool tests",
    "invoke: Invoke tool tests",
    "validate: Validate tool tests",
    "update: Update tool tests",
    "analyze: Analyze tool tests",
    "streaming: Streaming tests",
    "server: Server lifecycle tests",
    "cli: CLI integration tests",
    "error: Error handling tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_orc"]

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20250516",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.0.287",
    "mypy>=1.5.0",
    "pip>=25.3",
    "pip-audit>=2.6.0",
    "types-requests>=2.32.4.20250611",
    "complexipy>=3.3.0",
    "bandit>=1.8.6",
    "vulture>=2.14",
    "psutil>=6.1.0",
    "types-psutil>=7.0.0.20250601",
    "pytest-bdd>=8.1.0",
    "pytest-xdist>=3.8.0",
]

